# TSA

./: .gitignore  3.MPC.ipynb  pyproject.toml
LaTeX/: bibliography.bib  main.tex  style.tex
LaTeX/content/: 1.introduction.tex  2.data-processing.tex  3.ARX.tex  4.FNN.tex  4.NARX.tex  5.FNN.tex  5.MPC.tex  6.RNN.tex  7.conclusion.tex  7.results.tex  8.conclusion.tex  conclusion.tex  introduction.tex
LaTeX/figures/: fnn.dia  fnn.tex  rnn.dia  rnn.tex
export/: ARX.hkl  FNN.pt  NARX.hkl  RNN.pt  benchmark_ARX.hkl  benchmark_FNN.hkl  benchmark_NARX.hkl  benchmark_RNN.hkl  benchmark_state-space.hkl  dados.csv  fnn.pt
gPROMS/: plot.py  psa.gpj  simul_Cgi.csv  simul_Performance.csv  syngas.xml
src/: 0.Visualizar.ipynb  1.ARX.ipynb  1.Tratamento de Dados.ipynb  2.Correlação.ipynb  2.Linear.ipynb  2.Modelos Lineares.ipynb  2.NARX.ipynb  2.simulate.ipynb  3.FNN.ipynb  3.Linear.ipynb  3.MPC.ipynb  3.visualize.ipynb  4.FNN.ipynb  4.IMPC.ipynb  4.MPC2.ipynb  4.NARX.ipynb  4.RNN.ipynb  5.FNN.ipynb  5.IHMPC.ipynb  5.IHMPC.py  5.RNN.ipynb  5.SS.ipynb  5.visualize.ipynb  7.RNN.ipynb  7.benchmark.ipynb  8.benchmark.ipynb
src/Assimulo/: main.py
src/Assimulo/lib/: derivatives.py  plot.py
src/Assimulo/simulation/: constants.py  derivatives.py  initial.py  model.py  setup.py
src/CasADi/: v1.ipynb
src/MATLAB/IHMPC/: GF.mat  Test_OPOM.m  ihmpc.m  ihmpc_slack.m  issmpc.m  opom.m  opom_stds.m  output.mat  sim_issmpc.m  step_response.m
src/SciPy/: scipy_dae.ipynb
src/ihmpclab/: auxiliary.py  components.py
src/lib/: models.py  plot.py  read_data.py  utils.py
(+10 files in other folders)
