[project]
name = "TSA"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = "==3.14.0"
dependencies = [
    "hickle>=5.0.3",
    "ipykernel==6.31.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5"
]

[tool.ruff]
lint.extend-select = ["I"]
ignore = ["E741"]
format.docstring-code-format = true
