[project]
authors = [{name = "Silas Henrique", email = "silash35@gmail.com"}]
dependencies = []
name = "PSA"
requires-python = "==3.14.2"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
slycot = ">=0.6.1,<0.7"
control = ">=0.10.2,<0.11"
quadprog = ">=0.1.13,<0.2"
cvxopt = ">=1.3.2,<2"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.3.5,<3"
pandas = ">=2.3.3,<3"
seaborn = ">=0.13.2,<0.14"
ipykernel = ">=7.1.0,<8"
hickle = ">=5.0.3,<6"
ruff = ">=0.14.9,<0.15"

[tool.ruff]
lint.extend-select = ["I"]
ignore = ["E741"]
format.docstring-code-format = true
